sort.pancake.BubblePancake.scala.error
Compilation error:
BubblePancake:5: error: not found: value trouverBig
    trouverBig(nbCrepe-i)
    ^